Make login path relative Change w, r variable names to writer, response Change /submit/ directory to /login/submit/

--- a/static/html/login.html
+++ b/static/html/login.html
@@ -50,7 +50,7 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form action="/submit/" method="post">
+        <form action="/login/submit/" method="post">
             <input type="text" name="username" aria-label="Password" placeholder="Username" required>
             <input type="password" name="password" aria-label="Password" placeholder="Password" required>
             <button type="submit">Login</button>
