--- a/static/html/register.html
+++ b/static/html/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta id="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <style>
         body {
@@ -49,16 +49,17 @@
 <body>
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form action="/signup/submit/" method="post">
-            <input type="text" name="username" aria-label="Username" placeholder="Username" required>
-            <input type="email" name="email" aria-label="Email" placeholder="Email" required>
+        <form method="post" onsubmit="register(event)">
+            <input type="text" id="username" aria-label="Username" placeholder="Username" required>
+            <input type="email" id="email" aria-label="Email" placeholder="Email" required>
             
-            <input type="text" name="firstname" aria-label="First Name" placeholder="First Name" required>
-            <input type="text" name="lastname" aria-label="Last Name" placeholder="Last Name" required>
+            <input type="text" id="first_name" aria-label="First Name" placeholder="First Name" required>
+            <input type="text" id="last_name" aria-label="Last Name" placeholder="Last Name" required>
             
-            <input type="password" name="password" aria-label="Password" placeholder="Password" required>
+            <input type="password" id="password" aria-label="Password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
     </div>
+    <script src = "/static/script/register.js"></script>
 </body>
 </html>
