--- a/static/html/register.html
+++ b/static/html/register.html
@@ -53,8 +53,8 @@
             <input type="text" id="username" aria-label="Username" placeholder="Username" required>
             <input type="email" id="email" aria-label="Email" placeholder="Email" required>
             
-            <input type="text" id="first_name" aria-label="First Name" placeholder="First Name" required>
-            <input type="text" id="last_name" aria-label="Last Name" placeholder="Last Name" required>
+            <input type="text" id="firstName" aria-label="First Name" placeholder="First Name" required>
+            <input type="text" id="lastName" aria-label="Last Name" placeholder="Last Name" required>
             
             <input type="password" id="password" aria-label="Password" placeholder="Password" required>
             <button type="submit">Login</button>
